cool.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Finally it's time for my CSS code */
html , body { 
	background-color: rgb(42, 42, 42);
 	margin: 0;
    padding: 0;
	height: 100%;
	font-size: 12pt;
}
#header{
	position: fixed;
	top: 0;
	width: 100%;
	height: 4%;
	background-color:#fff;
	background-color:rgba(255,255,255,0.56);
	z-index:9;
}
#footer{
	position: fixed;
	bottom: 0;
	width: 100%;
	height: 4%;
	background-color:#fff;
	background-color:rgba(255,255,255,0.56);
	z-index:9;
}
#mainBG {
	height: 100%
    background-color: rgb(42, 42, 42);		
}

#slidesContainer {
    display: -webkit-flex;
    display: flex;
	-webkit-align-items: center;
    align-items: center;	
	-webkit-flex-direction: column;
    flex-direction: column;
	align-items: center;
	justify-content: center;
	min-height: 96%;
	max-width: 700pt;
	margin: auto;
}

.slideBox { 
	position: relative;
	background-image: url("oscarClipartNegSmDist.jpg"); 
	background-repeat: repeat; 
	background-position: left top;
	min-width: 35em;
	min-height: 35em;
	width: 90%;
	text-align: center;
	display: block;
	margin: auto;
	padding-top: 3em;
	padding-bottom: 14em;
	border: 3pt solid white;
	border-top: 0;
	border-bottom: 0;
}

.bottomSlideBox {
	background-image: url("baymax.jpg");
	background-size: 100% 100%;
	background-repeat:no-repeat;
	background-color: rgb(100, 200, 0);
	border-top: 0;
	height: 15em;
	min-height: 0;
	padding-top: 2em;
	padding-bottom: 0em;
}
.navBox {
	width: 100%;
}	
.navDown {
	margin-left: 2%;
	margin-top: 3%;
	float: left;
}
.navUp {
	margin-right: 2%;
	margin-top: 3%;
	float: right;
}
.navLink {
	color: white;
	font-family: "Impact"; 
	font-size: 3em;
	font-weight: bold;		
	text-decoration: none;
}

.titleBox {
	padding-top: 2em;
	padding-bottom: 2em;
}
.titleTextBox {
	padding: 1%;
	margin: 1%;
}
#regBox {
	padding: 1%;
	margin: 1%;
}
.textBox {
	position: absolute;
	left: 240pt;
	padding: 1%;
	margin: 1%;
}

.trailerBox {
	display: none;
}

.trailerLink {
	color: white;
	text-decoration: none;
	font-family: "Lato"; 
	font-weight: 400; 	
	font-size: 150%;
	font-weight: bold;	
}
.no-flash .trailerLink { 
	display: none; 
}
.flash .trailerLink { 
	display: block;
}

.commentTitle {
	color: #e0e0e0; 
	font-family: "Lato"; 
	font-weight: 300;	
}
.commentText {
	color: #BDBDBD; 
	font-family: "Lato"; 
	font-weight: 300;	
}
.posterBox {
	position: absolute;
	left: 1%;
	padding: 1%;
	margin: 1%;
}
.posterImg {
	margin-left: 4pt; 
	height: 300pt;
	position: relative;
	bottom: 0;
    vertical-align:top;
    opacity: 0.85;
    transition: opacity .25s ease-in-out;
    -moz-transition: opacity .25s ease-in-out;
    -webkit-transition: opacity .25s ease-in-out;	
}
.hover:hover{
    opacity:1.0;
}

#sponsorBox {
	margin: auto;
	position: absolute;
	padding-top: 5em;
	width: 100%;
	text-align: center;
}
#email {
	margin-left: 2%;
}
#okImg {
	visibility: hidden;
	margin-left: 4pt;
	width: 18pt; 
	height: 18pt;
	position: relative;
	bottom: -2pt;
}

h1 { 
	color: white;
	font-family: "Lato"; 
	font-weight: 300; 
	letter-spacing: 4pt;
	word-spacing: 5pt;
	font-size: 300%;
	font-weight: bold;
}
label { 
	color: white; 
	font-family: "Lato"; 
	font-weight: 400;
	font-size: 120%;
	line-height: 140%;	
}
p { 
	color: white; 
	font-family: "Lato"; 
	font-weight: 300;
	font-size: 120%;
	line-height: 140%;
}
li {
	margin: 4pt;
}

